--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
 TITLE = 'Azure Voting App'
-VOTE1VALUE = 'Jenkins is awesome!!'
-VOTE2VALUE = 'Jenkins is REALLY awesome!!!!'
+VOTE1VALUE = 'Cats'
+VOTE2VALUE = 'Dogs'
 SHOWHOST = 'false'
